# bank-webpage-backend

./: .env  .env.bak  .gitignore.bak  Cargo.toml  README.md
migrations/2023-07-27-213634_create_users/: up.sql
migrations/2023-08-04-135826_create_bank_users/: up.sql
migrations/2023-08-08-171342_create_bank_users/: up.sql  up.sql.bak
migrations/2023-08-09-133442_change_variable_date/: down.sql  up.sql  up.sql.bak
migrations/2023-10-01-190513_create_mails/: up.sql
migrations/2023-10-12-202457_delete_age/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/database/: database.rs
src/mail/: mail.rs
src/responses/: response.rs
src/services/: controllers.rs  mod.rs
src/services/controllers/: login_controller.rs  mail_controller.rs  mod.rs  register_controller.rs  user_controllers.rs
src/user/: user.rs
src/webforms/: mail.rs  mod.rs  userformlogin.rs  userformregister.rs
