[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version= "1.0.164", features= ["derive"]}
diesel = {version= "2.1.0", features= ["postgres", "chrono"]}
chrono = { version = "0.4.26", features = ["serde"] }
actix-cors = "0.6.4"
dotenvy = "0.15"     
env_logger = "0.10.0"
log = "0.4.19"
[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
